--- a/frontend/src/app.css
+++ b/frontend/src/app.css
@@ -8,9 +8,10 @@
     --color-secondary-2: #a855f7;
     --color-secondary-3: #7e22ce;
     --color-secondary-4: #3b0764;
-    --color-green-1: #bbf7d0;
-    --color-green-2: #22c55e;
-    --color-green-3: #15803d;
-    --color-green-4: #052e16;
+    --color-yellow-1: #f6f54d;
+    --color-yellow-2: #dddc45;
+    --color-yellow-3: #c4c43d;
+    --color-yellow-4: #acab35;
     --color-background: #152238;
+    --color-background-2: #000066;
 }
