--- a/frontend/src/app.css
+++ b/frontend/src/app.css
@@ -14,4 +14,5 @@
     --color-yellow-4: #acab35;
     --color-background: #152238;
     --color-background-2: #000066;
+    --color-error-message-1: #f0b100; 
 }
