--- a/frontend/src/app.css
+++ b/frontend/src/app.css
@@ -1,18 +1,17 @@
 @import 'tailwindcss';
 
 @theme {
-    --color-primary: #FF204E;
-    --color-primary-accent: #A0153E;
-    --color-primary-accent-2: #5D0E41;
+    --color-primary-1: #f6f54d;
+    --color-primary-2: #dddc45;
+    --color-primary-3: #c4c43d;
+    --color-primary-4: #acab35;
+    --color-ternary-1: #FF204E;
+    --color-ternary-2: #A0153E;
+    --color-ternary-3: #5D0E41;
     --color-secondary-1: #e9d5ff;
     --color-secondary-2: #a855f7;
     --color-secondary-3: #7e22ce;
     --color-secondary-4: #3b0764;
-    --color-yellow-1: #f6f54d;
-    --color-yellow-2: #dddc45;
-    --color-yellow-3: #c4c43d;
-    --color-yellow-4: #acab35;
     --color-background: #152238;
     --color-background-2: #000066;
-    --color-error-message-1: #f0b100; 
 }
