--- a/frontend/src/app.css
+++ b/frontend/src/app.css
@@ -14,4 +14,5 @@
     --color-secondary-4: #3b0764;
     --color-background: #152238;
     --color-background-2: #000066;
+    --color-success-1: #00bba7;
 }
