Added qubit lables and changes format functions for simulation result.

--- a/frontend/src/app.css
+++ b/frontend/src/app.css
@@ -5,6 +5,7 @@
     --color-primary-2: #dddc45; /* slightly muted yellow */
     --color-primary-3: #c4c43d; /* muted yellow */
     --color-primary-4: #acab35; /* olive yellow */
+    --color-ternary-0: #FF474D;
     --color-ternary-1: #FF204E; /* bright red/pink */
     --color-ternary-2: #A0153E; /* typo: likely meant #A0153E, dark red */
     --color-ternary-3: #5D0E41; /* deep purple-red */
